[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/CardView.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/CardControl.gd" type="Script" id=2]
[ext_resource path="res://assets/edit_icon.png" type="Texture" id=3]

[sub_resource type="ViewportTexture" id=1]
flags = 4
viewport_path = NodePath("viewport")

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("texture_rect:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "focus"
length = 0.28
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("texture_rect:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 1.15 ), Vector2( 1, 1 ) ]
}

[node name="card_control" type="AspectRatioContainer"]
margin_right = 97.0
margin_bottom = 135.0
size_flags_horizontal = 0
size_flags_vertical = 0
ratio = 0.72
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewport" type="Viewport" parent="."]
size = Vector2( 389, 543 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
msaa = 2
fxaa = true
usage = 0
render_target_update_mode = 3

[node name="card" parent="viewport" instance=ExtResource( 1 )]

[node name="texture_rect" type="TextureRect" parent="."]
margin_right = 97.0
margin_bottom = 135.0
rect_min_size = Vector2( 97, 135 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 6
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn" type="Button" parent="."]
margin_top = 0.138893
margin_right = 97.0
margin_bottom = 134.861
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true

[node name="edit_btn" type="Button" parent="."]
visible = false
margin_left = 61.0
margin_top = 0.138893
margin_right = 97.0
margin_bottom = 30.1389
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource( 3 )

[node name="anim_player" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/focus = SubResource( 3 )
